# Embedded-System

./: README.md
q1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  my_service.sevice.txt
q1/src/: embeddedServer.cpp  webServer.cpp
q2/server1/src/: server.py
q2/server1/src/GStreamer/: CMakeLists.txt  playlist.m3u8  segment00000.ts  segment00001.ts  segment00002.ts  streamer.c
q2/server2/src/hls-browser/: CORSRequestHandler.py  index.html
q3/: embepart3.pdsprj  q3.py
